--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 *.db filter=lfs diff=lfs merge=lfs -text
+*.VC.db filter=lfs diff=lfs merge=lfs -text
+*.ipch filter=lfs diff=lfs merge=lfs -text
+.db filter=lfs diff=lfs merge=lfs -text
+.VC.db filter=lfs diff=lfs merge=lfs -text
