attempt to enable VR settings

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=0DB7827040D933848796059902942C1B
 ProjectName=First Person BP Game Template
+bStartInVR=True
+
