--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -95,6 +95,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=-0.500000,Key=MotionController_Left_Thumbstick_Y)
 +AxisMappings=(AxisName="MoveRight",Scale=0.500000,Key=MotionController_Left_Thumbstick_X)
++AxisMappings=(AxisName="TurnRate",Scale=0.500000,Key=MotionController_Right_Thumbstick_X)
 DefaultTouchInterface=None
 ConsoleKey=None
 -ConsoleKeys=Tilde
